[package]
name = "net_scanner"
version = "0.0.1"
authors = ["cxdsad"]
edition = "2021"

[dependencies]
csv-async = "1.3.1"
tokio = {version = "1.46.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
tokio-util = {version = "0.7.15", features = ["full"]}
clap = {version = "4.5.41", features = ["derive"]}
serde_json = "1.0.141"
anyhow = "1.0.98"
once_cell = "1.21.3"
rand = "0.9.2"

[profile.release]
debug = true
strip = "debuginfo"
debug-assertions = true
opt-level = "s"
panic = "unwind"
incremental = false
overflow-checks = false
codegen-units = 1
lto = "fat"